kubernetes/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: b-okr
  name: burning-okr-app-deployment
  labels:
    app: burning-okr-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: burning-okr-app
  template:
    metadata:
      labels:
        app: burning-okr-app
    spec:
      containers:
        - name: burning-okr-postgres-database
          image: postgres:latest
          ports:
          - containerPort: 5432
        - name: burning-okr-app
          image: ghcr.io/burningokr/b-okr-be-dev:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              protocol: TCP
      imagePullSecrets:
        - name: ghcr-secret
---
apiVersion: v1
kind: Service
metadata:
  namespace: b-okr
  name: burning-okr-app-service
spec:
  type: ClusterIP
  selector:
    app: burning-okr-app
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: b-okr
  name: burning-okr-app-ingress
  annotations:
    cert-manager.io/cluster-issuer: "bag-k8s-issuer"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - dev-burning-okr.bag-k8s.brockhaus-ag.de
      secretName: burning-okr-app-tls
  rules:
    - host: dev-burning-okr.bag-k8s.brockhaus-ag.de
      http:
        paths:
          - backend:
              service:
                name: burning-okr-app-service
                port:
                  number: 80
            path: /
            pathType: Prefix
